@@ -1,12 +1,12 @@
 {
-  "timestamp" : "2024-10-02T00:54:22Z",
-  "count_outdated" : 104,
-  "uniques_outdated" : 60,
-  "count" : 105,
-  "uniques" : 61,
+  "timestamp" : "2024-11-20T00:57:01Z",
+  "count_outdated" : 105,
+  "uniques_outdated" : 61,
+  "count" : 106,
+  "uniques" : 62,
   "views" : [
     {
-      "timestamp": "2024-10-01T00:00:00Z",
+      "timestamp": "2024-11-19T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
